syntax = "proto3";

package proto;

option go_package = "./proto";

//****** Answers ********

service AnswersService {
    rpc CreateAnswer(Answer) returns (Answer);
    rpc GetAnswer(GetAnswerRequest) returns (Answer);
    rpc UpdateAnswer(Answer) returns (Answer);
    rpc DeleteAnswer(DeleteAnswerRequest) returns (DeleteAnswerResponse);
}

message Answer {
    string key = 1;
    string value = 2;
}

message GetAnswerRequest {
    string key = 1;
}

message DeleteAnswerRequest {
    string key = 1;
}

message DeleteAnswerResponse {
    string message = 1;
}


//****** Events *********

service EventsService {
    rpc GetEvents(GetEventsRequest) returns (GetEventsResponse);
}

message Event {
    string event = 1;
    Answer data = 2;
}

message GetEventsRequest {
    string key = 1;
}

message GetEventsResponse {
    repeated Event events = 1;
}

